--- a/theme/templates/customers/account.liquid
+++ b/theme/templates/customers/account.liquid
@@ -1,114 +1,138 @@
+<div class="container pt-5">
+    <div class="row">
 
-<div class="ah-container">
-    <div class="container">
-        <div class="row">
+        <div class="col-xs-12">
+            <h1 class="text-center">{{ 'customer.account.title' | t }}</h1>
+        </div>
 
+        {% if settings.show_account_message %}
             <div class="col-xs-12">
-                <h1 class="">{{ 'customer.account.title' | t }}</h1>
-            </div>
-
-            {% if settings.show_account_message %}
-                <div class="col-xs-12">
-                    <div class="alert alert-info" role="alert" id="AccountMessage">
-                    <strong>{{ settings.account_message_title }}</strong><br>
-                    {{ settings.account_message }}
-                    </div>
+                <div class="alert alert-info my-4" role="alert" id="AccountMessage">
+                <strong>{{ settings.account_message_title }}</strong><br>
+                {{ settings.account_message }}
                 </div>
-            {% endif %}
+            </div>
+        {% endif %}
 
-            <div class="col-xs-12 col-md-3">
-                <div class="well">
-                    <h2 class="h4">{{ 'customer.account.details' | t }}</h2>
-                    <h3 class="h5 mb-0">{{ customer.name }}</h3>
-                    <p class="">
-                        {{ customer.email }}
+        <div class="col-xs-12 col-md-3">
+            <div class="well">
+                <h2 class="h4">{{ 'customer.account.details' | t }}</h2>
+                <h3 class="h5 mb-0">{{ customer.name }}</h3>
+                <p class="">
+                    {{ customer.email }}
+                </p>
+                {% if customer.default_address != nil %}
+                    <p class="text-muted">
+                    {{ customer.default_address.address1 }}<br>
+
+                    {% if customer.default_address.address2 != "" %}
+                        {{ customer.default_address.address2 }}<br>
+                    {% endif %}
+
+                    {% if customer.default_address.city != "" %}
+                        {{ customer.default_address.city }}<br>
+                    {% endif %}
+
+                    {% if customer.default_address.province_code != "" %}
+                        {{ customer.default_address.province_code | upcase }}<br>
+                    {% endif %}
+
+                    {% if customer.default_address.zip != "" %}
+                        {{ customer.default_address.zip | upcase }}<br>
+                    {% endif %}
+
+                    {% if customer.default_address.country != "" %}
+                        {{ customer.default_address.country }}<br>
+                    {% endif %}
+
+                    {% if customer.default_address.phone != "" %}
+                        {{ customer.default_address.phone }}
+                    {% endif %}
                     </p>
-                    {% if customer.default_address != nil %}
-                        <p class="text-muted">
-                        {{ customer.default_address.address1 }}<br>
+                {% endif %}
 
-                        {% if customer.default_address.address2 != "" %}
-                            {{ customer.default_address.address2 }}<br>
-                        {% endif %}
+                <p class=""><strong><a class="addresses-link" href="/account/addresses">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></strong></p>
 
-                        {% if customer.default_address.city != "" %}
-                            {{ customer.default_address.city }}<br>
-                        {% endif %}
-
-                        {% if customer.default_address.province_code != "" %}
-                            {{ customer.default_address.province_code | upcase }}<br>
-                        {% endif %}
-
-                        {% if customer.default_address.zip != "" %}
-                            {{ customer.default_address.zip | upcase }}<br>
-                        {% endif %}
-
-                        {% if customer.default_address.country != "" %}
-                            {{ customer.default_address.country }}<br>
-                        {% endif %}
-
-                        {% if customer.default_address.phone != "" %}
-                            {{ customer.default_address.phone }}
-                        {% endif %}
-                        </p>
-                    {% endif %}
-
-                    <p class=""><strong><a class="addresses-link" href="/account/addresses">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></strong></p>
-
-                </div>
             </div>
+        </div>
 
-            <div class="col-xs-12 col-md-9">
-                <h2 class="h4">{{ 'customer.orders.title' | t }}</h2>
+        <div class="col-xs-12 col-md-9">
+            <h2 class="h4">{{ 'customer.orders.title' | t }}</h2>
 
-                {% comment %}
-                If we have past orders, loop through each one
-                {% endcomment %}
-                {% paginate customer.orders by 20 %}
-                    {% if customer.orders.size != 0 %}
+            {% comment %}
+            If we have past orders, loop through each one
+            {% endcomment %}
+            {% paginate customer.orders by 20 %}
+                {% if customer.orders.size != 0 %}
 
-                        <div class="">
-                            <table class="table table-hover">
-                                <thead>
+                    <div class="">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>{{ 'customer.orders.order_number' | t }}</th>
+                                <th>{{ 'customer.orders.date' | t }}</th>
+                                <th>{{ 'customer.orders.payment_status' | t }}</th>
+                                <th>{{ 'customer.orders.fulfillment_status' | t }}</th>
+                                <th>{{ 'customer.orders.total' | t }}</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for order in customer.orders %}
                                 <tr>
-                                    <th>{{ 'customer.orders.order_number' | t }}</th>
-                                    <th>{{ 'customer.orders.date' | t }}</th>
-                                    <th>{{ 'customer.orders.payment_status' | t }}</th>
-                                    <th>{{ 'customer.orders.fulfillment_status' | t }}</th>
-                                    <th>{{ 'customer.orders.total' | t }}</th>
+                                <td>{{ order.name | link_to: order.customer_url }}</td>
+                                <td>{{ order.created_at | date: format: 'month_day_year' }}</td>
+                                <td>{{ order.financial_status_label }}</td>
+                                <td>{{ order.fulfillment_status_label }}</td>
+                                <td>{{ order.total_price | money }}</td>
                                 </tr>
-                                </thead>
-                                <tbody>
-                                {% for order in customer.orders %}
-                                    <tr>
-                                    <td>{{ order.name | link_to: order.customer_url }}</td>
-                                    <td>{{ order.created_at | date: format: 'month_day_year' }}</td>
-                                    <td>{{ order.financial_status_label }}</td>
-                                    <td>{{ order.fulfillment_status_label }}</td>
-                                    <td>{{ order.total_price | money }}</td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    {% else %}
-                        <p>{{ 'customer.orders.none' | t }}</p>
-                    {% endif %}
-                    {% if paginate.pages > 1 %}
-                        <hr>
-                        <div class="pagination">
-                            {{ paginate | default_pagination | replace: '&laquo; Previous', '&larr;' | replace: 'Next &raquo;', '&rarr;' }}
-                        </div>
-                    {% endif %}
-                {% endpaginate %}
-            </div>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                {% else %}
+                    <p>{{ 'customer.orders.none' | t }}</p>
+                {% endif %}
+                {% if paginate.pages > 1 %}
+                    <hr>
+                    <div class="pagination">
+                        {{ paginate | default_pagination | replace: '&laquo; Previous', '&larr;' | replace: 'Next &raquo;', '&rarr;' }}
+                    </div>
+                {% endif %}
+            {% endpaginate %}
+        </div>
 
+        {% if settings.apps_bold_loyalty_points %}
             <div class="col-xs-12">           
                 <!-- Bold: Loyalty Points - Step 3 -->
                 {% include 'bold-loyalties-customer-transactions' %}
                 <!-- // end bold code -->
             </div>
-            
-        </div>
+        {% endif %}
+
+        {% if settings.apps_jumplink_exclusive_collections %}
+            <div class="col-xs-12">
+                <hr>
+                {% assign collectionHandles = customer.metafields.c_f.jumplink_unlocked_collections | strip | remove: ' ' | split: ',' %}
+
+                <h3>You unlocked Designers</h3>
+
+                {% if collections.frontpage.products.size > 0 %}
+                    <div class="alert alert-danger" role="alert">
+                        You are not unlocked for anything, please ask the site operator
+                    </div>
+                {% else %}
+                    <div class="row">
+                        {% for handle in collectionHandles %}
+                            {% assign collection = collections[handle] %}
+                            <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
+                                {% include 'jumplink-collection-grid-item' %}
+                            </div>                        
+                        {% endfor %}
+                    </div>
+                {% endif %}
+
+            </div>
+        {% endif %}
+        
     </div>
 </div>
