--- a/src/scss/theme-test.scss
+++ b/src/scss/theme-test.scss
@@ -33,10 +33,13 @@
 @import 'navbar';
 @import 'sidebar';
 @import 'images';
-@import 'list-collections';
-@import 'collection';
 @import 'pagination';
 @import 'footer';
 @import 'typography';
 @import 'buttons';
+@import 'list-group';
+@import 'breadcrumbs';
+
 @import 'customers-login-register';
+@import 'list-collections';
+@import 'collection';
