--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -38,6 +38,7 @@
 @import 'typography';
 @import 'buttons';
 @import 'list-group';
+@import 'breadcrumbs';
 
 @import 'customers-login-register';
 @import 'list-collections';
