--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -6220,7 +6220,7 @@ pre {
 // width for fluid, full width layouts.
 
 @if $enable-grid-classes {
-  .container {
+  .container-fluid {
     @include make-container();
   }
 }
@@ -11683,6 +11683,9 @@ $slick-next-character: "{% include 'iconset', name: 'arrow', direction: 'top', c
     margin: 4px 0;
     cursor: pointer;
 }
+$petty-font-size: 0.9rem;
+$petty-letter-spacing: 0.1em;
+
 .display-3, .display-4 {
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -11705,9 +11708,16 @@ b, strong {
     letter-spacing: 0.1rem;
 }
     
-.list-group-item, .nav-link, .nav-item .dropdown-toggle {
-    letter-spacing: 0.1em;
-    font-size: 0.9rem;
+.list-group-item,
+.nav-link,
+.nav-item .dropdown-toggle,
+.breadcrumb-item {
+    letter-spacing: $petty-letter-spacing;
+    font-size: $petty-font-size;
+}
+
+.btn {
+    letter-spacing: $petty-letter-spacing;
 }
 .btn {
     text-transform: uppercase;
@@ -11732,6 +11742,11 @@ b, strong {
     }
 }
 
+.breadcrumb-item {
+    .collection {
+        padding-left: 3rem;
+    }
+}
 [data-namespace="customers-register"], [data-namespace="customers-login"] {
     .form-group, .btn-group, h1 {
         max-width: 360px;
