--- a/theme/snippets/jumplink-navbar-breadcrumbs.liquid
+++ b/theme/snippets/jumplink-navbar-breadcrumbs.liquid
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default navbar-breadcrumbs no-border row my-0">
+<nav class="navbar navbar-light bg-white navbar-breadcrumbs border-px-0">
 
     <div class="hidden-xs col-sm-8">
-      {% include 'breadcrumbs' %}
+      {% include 'jumplink-breadcrumbs' %}
     </div>
 
     <div class="col-xs-12 col-sm-4">
