product breadcrumbs and product slide buttons

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -9,9 +9,11 @@
             color: $white;
         }
     }
-    .iconset.arrow {
-        display: inline-block;
-        margin-left: 1rem;
+    .iconset {
+        &.arrow {
+            display: inline-block;
+            margin-left: 1rem;
+        }
     }
 }
 
