--- a/theme/snippets/article-comments.liquid
+++ b/theme/snippets/article-comments.liquid
@@ -47,7 +47,7 @@
 
                 <div class="">
                 {% assign paginate_hash = '#comments' %}
-                {% include 'pagination' %}
+                {% include 'jumplink-pagination' %}
                 </div>
             </div>
 
