--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -4,7 +4,7 @@
       <div class="col-xs-12 text-center">
         <div class="text-uppercase" id="footer-book">
           BOOK AN APPOINTMENT
-          {% include 'iconset', name: 'arrow', direction: 'top', color: 'white' %}
+          {% include 'jumplink-iconset', name: 'arrow', direction: 'top', color: 'white' %}
         </div>
       </div>
     </div>
