--- a/theme/snippets/jumplink-iconset.liquid
+++ b/theme/snippets/jumplink-iconset.liquid
@@ -1,4 +1,4 @@
-{% assign snippet = name | prepend: 'iconset_' %}
+{% assign snippet = name | prepend: 'jumplink-iconset-' %}
 
 {% if direction == 'left' %}
 {% endif %}
