--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -58,7 +58,7 @@
                 </div>
               {% endfor %}
               <div class="col-xs-12">
-                {% include 'pagination', show_all_active: true %}
+                {% include 'jumplink-pagination', show_all_active: true %}
               </div>
             </div>
           </div>
