--- a/theme/templates/search.liquid
+++ b/theme/templates/search.liquid
@@ -65,7 +65,7 @@ selectors inside search.css.
               </div>
             {% endif %}    
             
-            {% include 'pagination' %}
+            {% include 'jumplink-pagination' %}
           
           {% endpaginate %}  
 
