--- a/src/scss/_breadcrumbs.scss
+++ b/src/scss/_breadcrumbs.scss
@@ -3,3 +3,17 @@
         padding-left: 3rem;
     }
 }
+
+[class^="col-"] {
+    .breadcrumb {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.iconset {
+    &.arrow {
+        display: inline-block;
+        margin-left: 1rem;
+    }
+}
