--- a/theme/snippets/jumplink-pagination.liquid
+++ b/theme/snippets/jumplink-pagination.liquid
@@ -7,7 +7,7 @@
 
           <li class="page-item {% unless paginate.previous.is_link %}disabled{% endunless %}">
             <a class="page-link" href="{{ paginate.previous.url }}{{paginate_hash}}" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} aria-label="{{ 'general.paginate.prev_label' | t }}">
-              {% include 'iconset', name: 'arrow', direction: 'left' %}
+              {% include 'jumplink-iconset', name: 'arrow', direction: 'left' %}
               <span class="sr-only">{{ 'general.paginate.prev_label' | t }}</span>
             </a>
           </li>
@@ -29,7 +29,7 @@
 
           <li class="page-item {% unless paginate.next.is_link %}disabled{% endunless %}">
             <a class="page-link" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} href="{{ paginate.next.url }}{{paginate_hash}}" aria-label="{{ 'general.paginate.next_label' | t }}">
-              {% include 'iconset', name: 'arrow', direction: 'right' %}
+              {% include 'jumplink-iconset', name: 'arrow', direction: 'right' %}
               <span class="sr-only">{{ 'general.paginate.next_label' | t }}</span>
             </a>
           </li>
