--- a/theme/templates/index.liquid
+++ b/theme/templates/index.liquid
@@ -8,7 +8,7 @@
         </div>
       {% endfor %}
     </div>
-    {% include 'pagination', show_all_active: false %}
+    {% include 'jumplink-pagination', show_all_active: false %}
   {% endpaginate %}
 
   <div class="row">
