cleanup product page

--- a/src/scss/_breadcrumbs.scss
+++ b/src/scss/_breadcrumbs.scss
@@ -17,3 +17,10 @@
         margin-left: 1rem;
     }
 }
+
+// hide active breadcrumbs
+.breadcrumb-item {
+    &.active {
+        display: none;
+    }
+}
