--- a/src/scss/_variables.scss.liquid
+++ b/src/scss/_variables.scss.liquid
@@ -8,5 +8,15 @@ $font-avantgarde-bold-woff-path: "{{ 'avantgarde-book-bold.woff' | asset_url }}"
 $font-avantgarde-bold-ttf-path: "{{ 'avantgarde-book-bold.ttf' | asset_url }}";
 $font-avantgarde-bold-svg-path: "{{ 'avantgarde-book-bold.svg' | asset_url }}";
 
-$slick-prev-character: url({{ 'arrow-big-l.svg' | asset_url }});
-$slick-next-character: url({{ 'arrow-big-r.svg' | asset_url }});
+$iconset-arrow-l-url: '{{ 'arrow-l.svg' | asset_url }}';
+$iconset-arrow-r-url: '{{ 'arrow-r.svg' | asset_url }}';
+$iconset-arrow-b-url: '{{ 'arrow-b.svg' | asset_url }}';
+$iconset-arrow-t-url: '{{ 'arrow-t.svg' | asset_url }}';
+
+$iconset-arrow-big-l-url: '{{ 'arrow-big-l.svg' | asset_url }}';
+$iconset-arrow-big-r-url: '{{ 'arrow-big-r.svg' | asset_url }}';
+$iconset-arrow-big-b-url: '{{ 'arrow-big-b.svg' | asset_url }}';
+$iconset-arrow-big-t-url: '{{ 'arrow-big-t.svg' | asset_url }}';
+
+$slick-prev-character: url($iconset-arrow-big-l-url);
+$slick-next-character: url($iconset-arrow-big-r-url);
