--- a/theme/templates/page.designer.liquid
+++ b/theme/templates/page.designer.liquid
@@ -47,7 +47,7 @@
                                 classWrapper: '',
                                 subtext1: settings.designer_col_3_subtext,
                                 textAlign: 'text-center',
-                                titleClass: 'text-sans-serif text-bold'
+                                titleClass: ' '
                             %}
                         </div>
                     </div>
