--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -10571,8 +10571,20 @@ $font-avantgarde-bold-ttf-path: "./avantgarde-book-bold.ttf" !default;
 $font-avantgarde-bold-svg-path: "./avantgarde-book-bold.svg" !default;
 
 
-$slick-prev-character: "";
-$slick-next-character: "";
+$iconset-arrow-l-url: '';
+$iconset-arrow-r-url: '';
+$iconset-arrow-b-url: '';
+$iconset-arrow-t-url: '';
+
+$iconset-arrow-big-l-url: '';
+$iconset-arrow-big-r-url: '';
+$iconset-arrow-big-b-url: '';
+$iconset-arrow-big-t-url: '';
+
+
+$slick-prev-character: url($iconset-arrow-l-url);
+$slick-next-character: url($iconset-arrow-r-url);
+
 $font-avantgarde-eot-path: "{{ 'avantgarde-book.eot' | asset_url }}";
 $font-avantgarde-woff-path: "{{ 'avantgarde-book.woff' | asset_url }}";
 $font-avantgarde-ttf-path: "{{ 'avantgarde-book.ttf' | asset_url }}";
@@ -10583,8 +10595,19 @@ $font-avantgarde-bold-woff-path: "{{ 'avantgarde-book-bold.woff' | asset_url }}"
 $font-avantgarde-bold-ttf-path: "{{ 'avantgarde-book-bold.ttf' | asset_url }}";
 $font-avantgarde-bold-svg-path: "{{ 'avantgarde-book-bold.svg' | asset_url }}";
 
-$slick-prev-character: url({{ 'arrow-big-l.svg' | asset_url }});
-$slick-next-character: url({{ 'arrow-big-r.svg' | asset_url }});
+$iconset-arrow-l-url: '{{ 'arrow-l.svg' | asset_url }}';
+$iconset-arrow-r-url: '{{ 'arrow-r.svg' | asset_url }}';
+$iconset-arrow-b-url: '{{ 'arrow-b.svg' | asset_url }}';
+$iconset-arrow-t-url: '{{ 'arrow-t.svg' | asset_url }}';
+
+$iconset-arrow-big-l-url: '{{ 'arrow-big-l.svg' | asset_url }}';
+$iconset-arrow-big-r-url: '{{ 'arrow-big-r.svg' | asset_url }}';
+$iconset-arrow-big-b-url: '{{ 'arrow-big-b.svg' | asset_url }}';
+$iconset-arrow-big-t-url: '{{ 'arrow-big-t.svg' | asset_url }}';
+
+$slick-prev-character: url($iconset-arrow-big-l-url);
+$slick-next-character: url($iconset-arrow-big-r-url);
+
 // http://stackoverflow.com/questions/5780109/removing-rounded-corners-from-a-select-element-in-chrome-webkit
 select {
   -webkit-appearance: none;
@@ -11662,9 +11685,6 @@ $slick-next-character: "{% include 'iconset', name: 'arrow', direction: 'top', c
 }
 
 .pagination {
-  .page-item {
-    border: none;
-  }
   &.slide-buttons {
       .iconset {
           &.arrow, &.arrow-big {
@@ -11781,6 +11801,20 @@ b, strong {
         margin-left: 1rem;
     }
 }
+
+// hide active breadcrumbs
+.breadcrumb-item {
+    &.active {
+        display: none;
+    }
+}
+.form-control {
+    text-transform: uppercase;
+}
+
+.custom-select {
+    background-image: url($iconset-arrow-b-url);
+}
 [data-namespace="customers-register"], [data-namespace="customers-login"] {
     .form-group, .btn-group, h1 {
         max-width: 360px;
@@ -11840,4 +11874,7 @@ b, strong {
         @include vp-position(fixed);
         top: 53.5px; // navbar height
     }
+}
+.product-price {
+    font-weight: bold;
 }
