--- a/theme/snippets/jumplink-navbar-dropdown-designer.liquid
+++ b/theme/snippets/jumplink-navbar-dropdown-designer.liquid
@@ -43,7 +43,7 @@
                                         classWrapper: '',
                                         subtext1: settings.designer_col_3_subtext,
                                         textAlign: 'text-center',
-                                        titleClass: 'text-sans-serif text-bold'
+                                        titleClass: ' '
                                     %}
                                 </div>
                             </div>
