--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -1,3 +1,11 @@
 .product-price {
     font-weight: bold;
+    letter-spacing: 0.1rem;
+}
+
+.product-photo-carousel-arrows {
+    .iconset {
+        padding: 0.5rem;
+        cursor: pointer;
+    }
 }
