--- a/src/scss/theme-test.scss
+++ b/src/scss/theme-test.scss
@@ -43,6 +43,7 @@
 @import 'list-group';
 @import 'breadcrumbs';
 @import 'forms';
+@import 'iconset';
 
 @import 'customers-login-register';
 @import 'list-collections';
