--- a/theme/snippets/jumplink-filter.liquid
+++ b/theme/snippets/jumplink-filter.liquid
@@ -1,4 +1,4 @@
-<div class="hidden-md-down pt-5">
+<div class="hidden-md-down filter">
 
   {% include 'jumplink-filter-collections', title: 'Designer' %}
 
