--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -6,10 +6,10 @@
     <meta itemprop="url" content="{{ shop.url }}{{ product.url }}" />
     <meta itemprop="image" content="{{ product | img_url: 'grande' }}" />
     <meta itemprop="brand" content="{{ product.vendor }}" />
-    <meta itemprop="name">{{ product.title }}</meta>
+    <meta itemprop="name" content="{{ product.title }}" />
     <meta itemprop="priceCurrency" content="{{ shop.currency }}" />
     <meta itemprop="price" content="{{ product.price | money }}" />
-    <meta itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+    <meta itemprop="offers" itemscope itemtype="http://schema.org/Offer" />
 
     {% if product.available %}
       <link itemprop="availability" href="http://schema.org/InStock" />
@@ -23,7 +23,7 @@
       <div class="row">
 
         <div data-collection-filter="true" class="col-xs-12 col-md-4 col-lg-3">
-          {% include 'jumplink-collection-filter'%}
+          {% include 'jumplink-filter' %}
         </div>
         
         <div class="product-photos col-xs-12 col-md-4 offset-md-4 col-lg-5 offset-lg-3 mb-1">
@@ -55,7 +55,7 @@
           {% endif %}
           <h1 class="product-vendor">{{ product.vendor | link_to: vendor_url }}</h1>
                     
-          <div class="delta my-1">
+          <div class="my-1">
             <p class="m-0">
               {% comment %}
                 Conntent set via JavaScript!
@@ -75,11 +75,11 @@
                 {% endif %}
                 <!-- // end bold code -->
               {% endif %}
-
             </p>
+            
             <p class="product-legal-text m-0">
               <a href="{{ pages.vat.url }}" title="{{ pages.versand.title }}">
-                {{ 'product.general.legal_price_text' | t: vat_rate: '19' }}
+                <small>{{ 'product.general.legal_price_text' | t: vat_rate: '19' }}</small>
               </a>
             </p>
 
@@ -94,63 +94,17 @@
 
           <p  class="product-title">
             Code <span>{{ product.title }}</span>
-          </p>   
+          </p>
+
+          <div id="handle-{{product.handle}}_add-or-not-from" class="form-group hidden-xs-up">
+            <input type="submit" name="add" id="handle-{{product.handle}}_add" class="btn btn-primary w-100" value="{{ 'cart.general.add_to_cart' | t | escape }}">
+          </div>
                 
           {% if settings.product_show_backorder_message %}
-            <div id="handle-{{product.handle}}_backorder" class="#backorder" class="hidden">
+            <div id="handle-{{product.handle}}_backorder" class="#backorder" class="hidden-xs-up">
               <p class=""> {{ '%s wird nachbestellt. Wir werden es in 10 bis 15 Tagen seperat verschicken.' | replace: '%s', '<span class="selected-variant"></span>' }}</p>
             </div>
           {% endif %}
-
-          {% comment %}
-            Conntent set via JavaScript!
-            Container for Variant Selections 
-          {% endcomment %}
-          <div class="row product-variants"></div>      
-            
-          <div class="form-inline my-1">
-
-
-            <div id="handle-{{product.handle}}_qty-form-group" class="form-group">
-              <div id="handle-{{product.handle}}_qty-input-group" class="js-qty input-group input-group-no-middle-borders input-group-width-90px hidden" role="group" aria-label="Manage Quantity">
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-default js-qty__adjust js-qty__adjust--minus">&minus;</button>
-                </span>
-                <input type="text" name="{{inputName}}" class="form-control js-qty__num" value="1" min="1" aria-label="quantity" pattern="[0-9]*">
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-default js-qty__adjust js-qty__adjust--plus">+</button>
-                </span>
-              </div>
-            </div>
-
-            <div id="handle-{{product.handle}}_add-or-not-from" class="form-group hidden">
-              <input type="submit" name="add" id="handle-{{product.handle}}_add" class="btn btn-primary add_to_cart-selector" value="{{ 'cart.general.add_to_cart' | t | escape }}">
-            </div>
-
-            {% if settings.apps_bold_loyalty_points %}
-              {% if settings.product_show_loyalty_spend_button %}
-                <div class="form-group">
-                  <!-- Bold: Loyalty Points - Step 6 -->
-                  <div class="bold-loyalties-redeem">
-                    <a href="#" disabled="disabled" class="buy-with-rewards btn secondary disabled">Herzen einlösen</a>
-                  </div>
-                  <!-- // end bold code -->
-                </div>
-              {% endif %}
-            {% endif %}
-
-            {% if settings.apps_back_in_stock_by_yellow_robot_pty_ltd %}
-              <div id="handle-{{product.handle}}_bsi-from" class="form-group bsi-form hidden">
-                <a href="#" id="handle-{{product.handle}}_bsi" data-product-handle="{{ product.handle }}" class="btn btn-primary bsi-button BIS_trigger">{{ 'product.general.notify' | t }}</a>
-              </div>
-            {% endif %}
-
-            {% if settings.apps_wishlist_king_by_appmate %}
-              <div class="form-group ">
-                <!-- include 'wishlist-button-product' with '{{ product.id }}' -->
-              </div>
-            {% endif %}
-          </div>        
 
           {% if settings.product_tabs %}
             {% comment %}
@@ -193,7 +147,6 @@
             </div>
           {% else %}
             <div>
-              <hr>
               {% comment %}
                 TODO style and use bootstrap tabs like on top {% include 'jumplink-product-description-tabs' %}
               {% endcomment %}
@@ -201,6 +154,55 @@
               {{ product.metafields.c_f.jumplink_tab_2 }}
             </div>
           {% endif %}
+
+          {% comment %}
+            Prepents via JavaScript!
+            Container for Variant Selections 
+          {% endcomment %}
+          <div class="product-variants d-flex justify-content-between align-items-stretch flex-row">
+          
+            <div class="input-group group-quantity-actions hidden-xs-up" role="group" aria-label="Adjust the quantity">
+
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-secondary" data-quantity-decrease="10">&minus;</button>
+              </span>
+
+              <input type="text" name="quantity" class="form-control" data-quantity-number="true" value="10" min="1" aria-label="quantity" pattern="[0-9]*">
+
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-secondary border-left-0" data-quantity-increase="10">+</button>
+              </span>
+
+            </div>
+          
+          </div>      
+            
+          <div class="form-inline my-1">
+
+            {% if settings.apps_bold_loyalty_points %}
+              {% if settings.product_show_loyalty_spend_button %}
+                <div class="form-group">
+                  <!-- Bold: Loyalty Points - Step 6 -->
+                  <div class="bold-loyalties-redeem">
+                    <a href="#" disabled="disabled" class="buy-with-rewards btn secondary disabled">Herzen einlösen</a>
+                  </div>
+                  <!-- // end bold code -->
+                </div>
+              {% endif %}
+            {% endif %}
+
+            {% if settings.apps_back_in_stock_by_yellow_robot_pty_ltd %}
+              <div id="handle-{{product.handle}}_bsi-from" class="form-group bsi-form hidden-xs-up">
+                <a href="#" id="handle-{{product.handle}}_bsi" data-product-handle="{{ product.handle }}" class="btn btn-primary bsi-button BIS_trigger">{{ 'product.general.notify' | t }}</a>
+              </div>
+            {% endif %}
+
+            {% if settings.apps_wishlist_king_by_appmate %}
+              <div class="form-group ">
+                <!-- include 'wishlist-button-product' with '{{ product.id }}' -->
+              </div>
+            {% endif %}
+          </div>        
 
           {% comment %}
             All themes by Shopify should support the Product Reviews app out of the box.
